--- a/references.bib
+++ b/references.bib
@@ -4,6 +4,31 @@
   year={2007}
 }
 
+
+@inbook{grenoble_2011,
+  place={Cambridge},
+  series={Cambridge Handbooks in Language and Linguistics},
+  title={Language ecology and endangerment},
+  DOI={10.1017/CBO9780511975981.002},
+  booktitle={The Cambridge Handbook of Endangered Languages},
+  publisher={Cambridge University Press},
+  author={Grenoble, Lenore A.},
+  editor={Austin, Peter K. and Sallabank, JuliaEditors}, year={2011},
+  pages={27-44},
+  collection={Cambridge Handbooks in Language and Linguistics}
+}
+
+@inbook{wals-141,
+  address   = {Leipzig},
+  author    = {Bernard Comrie},
+  booktitle = {The World Atlas of Language Structures Online},
+  editor    = {Matthew S. Dryer and Martin Haspelmath},
+  publisher = {Max Planck Institute for Evolutionary Anthropology},
+  title     = {Writing Systems},
+  url       = {http://wals.info/chapter/141},
+  year      = {2013}
+}
+
 @article{kornai2013digital,
   title={Digital language death},
   author={Kornai, Andr{\'a}s},
