Adding urls to DARPA

--- a/thesis.tex
+++ b/thesis.tex
@@ -223,6 +223,9 @@ Whether it makes sense to decouple code from data, especially in cases of low re
 
 IARPA and DARPA both are involved with low resource languages and both of them may have their own institutional values that are probably at ends with independent researchers, commercial consumers, and language communities. Does working on sparse data openly bring along with it ethical or moral concerns; if so, how can these be adequately explained, breached, and talked about? How can they be worked around or be part of the conversation? Note that DARPA and the like also use humanitarian reasons as their primary stated aim for work on sparse languages, which may be contrary to their military needs. There is already an extensive literature on moral uses of data -- I could summarize that, and apply it specifically to low resource languages, which is something I do not think has yet been published.
 
+% Darpa: http://www.darpa.mil/program/low-resource-languages-for-emergent-incidents
+% IARPA: http://www.iarpa.gov/index.php/research-programs/babel
+
 \section{Digital Permanence and Storage}
 
 Universities and institutions have short timelines and are largely dependent on specific, allocated, and thus finite funding. What other models are there for data storage? What concerns are there?
