--- a/LREC2016/lrec2016.sty
+++ b/LREC2016/lrec2016.sty
@@ -143,8 +143,8 @@
 \setlength\headheight{0pt}
 \setlength\headsep{0pt}
 \setlength\footskip{0pt}                % irrelevant when no footers.
-\pagestyle{empty}			% no page numbers
-\thispagestyle{empty}			% no page numbers
+%\pagestyle{empty}			% no page numbers
+%\thispagestyle{empty}			% no page numbers
 
 \setlength{\baselineskip}{11pt} %LREC 98 
 
