Adding crisis mt

--- a/references.bib
+++ b/references.bib
@@ -4,6 +4,21 @@
   year={2007}
 }
 
+@inproceedings{Lewis:2011:CMD:2132960.2133030,
+ author = {Lewis, William D. and Munro, Robert and Vogel, Stephan},
+ title = {Crisis MT: Developing a Cookbook for MT in Crisis Situations},
+ booktitle = {Proceedings of the Sixth Workshop on Statistical Machine Translation},
+ series = {WMT '11},
+ year = {2011},
+ isbn = {978-1-937284-12-1},
+ location = {Edinburgh, Scotland},
+ pages = {501--511},
+ numpages = {11},
+ url = {http://dl.acm.org/citation.cfm?id=2132960.2133030},
+ acmid = {2133030},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+}
 
 @inbook{grenoble_2011,
   place={Cambridge},
