--- a/thesis.tex
+++ b/thesis.tex
@@ -50,7 +50,31 @@
 \setcounter{page}{1}
 \section{Introduction}
 
-At least half of the world's 7000 languages will be extinct this century \cite[p. 27]{grenoble_2011}. Only a small number are present on the World Wide Web, or present in digital form. The majority of technological infrastructure that first world nations use and depend upon has been built with English, and serves English speakers. There are a few languages with large populations and state-backing which have a large foothold on the web. For instance, China is estimated to have more users of the internet than Japan, India, and the United States combined \footnote{\url{http://chinapower.csis.org/web-connectedness/}{http://chinapower.csis.org/web-connectedness/}}. The majority of these users will be speakers of Standard Mandarin, and not English; the operating systems and infrastructural backbone will still depend upon English-language originating software, but the user interface will be in Chinese. Tt is estimated that less than 5\% of the world's langauges will be used online or have significant digital presence \cite{kornai2013digital}.
+\subsubsection{The current state of language divesity}
+
+At least half of the world's 7000 languages will be extinct this century \cite[p. 27]{grenoble_2011}. Only a small number are present on the World Wide Web, or present in digital form. The majority of technological infrastructure that first world nations use and depend upon has been built with English, and serves English speakers. There are a few languages - perhaps thirty - with the combination of large populations, official governmental status, and Westernised, industrial economies which affords them a large foothold on the web. It is estimated that less than 5\% of the world's languages will be used online or have significant digital presence \cite{kornai2013digital}.
+
+\subsubsection{Digital presence}
+
+A language's digital presence is defined by: its ability to have tools which are easily accessible to users of the language, applications build on top of that tooling, large amounts of mono- and bilingual corpora, and an active amount of speakers (generally, in the millions). Generally, this also needs official backing in the form of an official status for a language, set at a national level. For instance, English is considered the {\it de facto} national language of United States, and the overwhelming majority of language users and computational software developed in the States is in English. In Europe, the EU mandates that citizens have the right to correspond with an EU institution (and receive a response back) in any of the 24 recognized official languages of the respective member states.\footnote{\href{https://europa.eu/european-union/topics/multilingualism\_en}{https://europa.eu/european-union/topics/multilingualism\_en}} This includes relatively small languages, such as Maltese, which has a significant web presence and tooling considering there are only just under half a million speakers. \footnote{\href{https://www.ethnologue.com/language/mlt}{https://www.ethnologue.com/language/mlt}} China is estimated to have more users of the internet than Japan, India, and the United States combined.\footnote{\href{http://chinapower.csis.org/web-connectedness/}{http://chinapower.csis.org/web-connectedness/}} But while the majority of these users will be speakers of Standard Mandarin, and not English; the operating systems and infrastructural backbone will still depend upon English-language originating software (although the user interface will be in Chinese).
+
+Neither official status nor population size necessarily means that a language will have resources or a digital presence, however. Romansh, although it is an official, provincial language of Switzerland, does not enjoy the same privileges as French or German, as there are only 40,000 speakers.\footnote{\href{https://www.ethnologue.com/language/roh}{https://www.ethnologue.com/language/roh}} Min Dong, although it has over nine million speakers \footnote{\href{https://www.ethnologue.com/language/cdo}{https://www.ethnologue.com/language/cdo}}, does not afford the same privileges as Mandarin, as it is not the official language of China. It is also not true that a language needs to have a large government presence or access to military-grade technology to have digital resources - a notable example would be Haitain Creole, spoken by over ten million speakers in one of the world's poorest countries. After the 2010 earthquake, Google, Microsoft, and Carnegie Mellon collaborated to make a machine translation system, an overwhelmingly difficult achievement.\cite{Lewis:2011:CMD:2132960.2133030}
+
+\subsubsection{Interested parties for smaller languages}
+
+There are, of course, thousands of languages which could be used as examples of little to no resources, without recognition, speakers, or high literacy or computational use. The majority of languages do not have access to large financial bodies (whether military, governmental, or private) willing to invest in technical development, nor in developing large corpora which could be used to develop, bootstrap, and train computational tools. In such cases, any development work is normally undertaken by a few different groups; higher education departments or labs, native speakers with some digital ability, and missionaries, or, more usually, a combination of all three.
+
+These groups normally do not have access to large amounts of corpora, computational resources (such as servers, grids, or databanks), or, most importantly, manpower, time, and money. They are more often goal driven. For instance, Wycliffe %\TODO CITE
+ translators are most interested in developing language literacy in order to translate the Bible into a language for first language speakers; they are often less interested in machine translation, Facebook groups, or developing literacy for schools unless it helps them towards this end. Native developers are normally more interested in developing apps or websites for locals, but they are often less interested in larger dictionaries, speech to text or text to speech resources, or use cases outside of their individual ken. Finally, academic staff are often forced to be myopic in scope in order to publish academically for their wider industry, and are less able to easily embark on decade-long timelines to developer singular resources. They are also often financially fragile, and depend on local investors or governmental budgets and stipends to fund their research, all of which often work on shorter timescales than missionaries or first language developers, who normally devote their entire lives to a particular language group. Finally, academics are often individual workers, working on a language family or small group at the expense of related languages, as they need are driven by the publish-or-perish academic market and do not usually have large amounts of funding for multilingual efforts.
+
+
+\subsubsection{Language research funding}
+
+\subsubsection{Open source as a solution}
+
+\subsubsection{Current Open Source resources}
+
+
 
 In this paper, I will talk about:
 
