--- a/thesis.tex
+++ b/thesis.tex
@@ -27,7 +27,7 @@
 
 
 \abstract{
-% TODO
+% TODO Rewrite this into something useful
 % We present a database of open source code that can be used by low-resource language
 % communities and developers to build digital resources. Our database is also useful to software developers
 % working with those communities and to researchers looking to describe the state of the field
@@ -37,22 +37,58 @@
 }
 
 \begin{document}
-
 \begin{titlepage}
 \maketitleabstract
-
-
-
 \tableofcontents
 \end{titlepage}
-
-
 \setcounter{page}{1}
+
+%%%%%%%%%%
+%% Goal: Extend the LREC paper into a full-length thesis.
+%%   Give a broader overview of the state of low-resource languages in         %%   Europe (and elsewhere).
+%%%%%%%%%%
+
 \section{Introduction}
 
-\subsubsection{The current state of language divesity}
-
 At least half of the world's 7000 languages will be extinct this century \cite[p. 27]{grenoble_2011}. Only a small number are present on the World Wide Web, or present in digital form. The majority of technological infrastructure that first world nations use and depend upon has been built with English, and serves English speakers. There are a few languages - perhaps thirty - with the combination of large populations, official governmental status, and Westernised, industrial economies which affords them a large foothold on the web. It is estimated that less than 5\% of the world's languages will be used online or have significant digital presence \cite{kornai2013digital}.
+
+
+
+- Definition of computational linguistics, and linguistic tooling
+- Code as it pertains to lrl
+- state of the field linguistically
+- State of the field computationally
+- Lack of sharing code or storing it usefully, due to factors: funding, academic cycle, inability, scope, lack of knowledge of domain
+- Some shared code
+
+
+In this paper, I will talk about:
+
+\begin{itemize}
+\item - Open source code
+\item  - Longevity of linguistic scholarship and work
+\item   - Data, rights, liability, and privacy
+\item   - Funding
+\item     - Institutional bottleneck
+\item     - Linguistic colonialism-
+\item     - Ethical and moral concerns for military usage
+\item     - Ethical and moral concerns for big business usage
+\item - Open Source work currently available
+\item   - Case study on GitHub, SourceForge, some archival sites (UPenn, Max Planck, DFKI)
+\item - Case study using endangered-languages repository
+\item   - Get diagnostics on the state of the links I've found:
+\item     - What percentage have been updated when
+\item     - Downloaded, etc.
+\item   - Review Excel results
+\item - Peer-to-peer solution for sharing code
+\item   - Stub out example
+\item   - Build a web searcher for automatically getting and sharing code
+\item Further Work: Open source data repositories (touch on), and Working with Ethnologue
+\end{itemize}
+
+Then, I will offer some concluding remarks.
+
+\subsubsection{The current state of language divesity}
 
 \subsubsection{Digital presence}
 
@@ -76,30 +112,6 @@ These groups normally do not have access to large amounts of corpora, computatio
 
 
 
-In this paper, I will talk about:
-
-- Open source code
-  -  Longevity of linguistic scholarship and work
-  - Data, rights, liability, and privacy
-  - Funding
-    - Institutional bottleneck
-    - Linguistic colonialism-
-    - Ethical and moral concerns for military usage
-    - Ethical and moral concerns for big business usage
-- Open Source work currently available
-  - Case study on GitHub, SourceForge, some archival sites (UPenn, Max Planck, DFKI)
-- Case study using endangered-languages repository
-  - Get diagnostics on the state of the links I've found:
-    - What percentage have been updated when
-    - Downloaded, etc.
-  - Review Excel results
-- Peer-to-peer solution for sharing code
-  - Stub out example
-  - Build a web searcher for automatically getting and sharing code
-Further Work:
-  - Open source data repositories (touch on)
-  - Working with Ethnologue
-Conclusion
 
 
 \section{Language Case Studies}
@@ -200,21 +212,21 @@ While FLEx is open source, none of the linguists edit the code for it or use the
 
 {\it Open Source} is a complex term which refers to any code, not just code related to computational linguistics. At its core, {\it open source} refers to code which has a license which allows it to be available to freely inspect, use, or modify by anyone. It was introduced in 1998 by some programmers, in response to the Netscape browser's code being openly licensed and made available. {\it Open source} is one of many terms which can be used to differentiate code which is either available or licensed permissively for re-use; other terms include {\it free software} and {\it libre software}, or the combination, {\it FLOSS} (free and and libre open source software). There is no standard definition of open source that is universally accepted.
 
-Nor will universal acceptance be forthcoming. The issue regarding reconciliation between open source, free software, and the rest of the terms stems largely from a different of opinion between what constitutes open software. For some adherents, software itself ought to be free, as it is a result of human labour and because it is maximally helpful for others to never have to code that again. This idea contains within it the seed of the digital commons: like the commons in philosophical and economic literature, code can be viewed as a resource that belongs to humanity as a whole, and not the creators who initially fashioned it. In this sense, open source is a philosophy.
+Nor will universal acceptance be forthcoming. The issue regarding reconciliation between open source, free software, and the rest of the terms stems largely from a difference of opinion between what constitutes open software. For some adherents, software itself ought to be free, as it is a result of human labour and because it is maximally helpful for others to never have to code that again. This idea contains within it the seed of the digital commons: like the commons in philosophical and economic literature, code can be viewed as a resource that belongs to humanity as a whole, and not the creators who initially fashioned it. In this sense, open source is a more of a philosophical theme than a technical term.
 
 \begin{quote}
 Open source is a development methodology; free software is a social movement. For the free software movement, free software is an ethical imperative, essential respect for the users' freedom. By contrast, the philosophy of open source considers issues in terms of how to make software  "better" - in a practical sense only. It says that nonfree software is an inferior solution to the practical problem at hand.
 \signed Richard Stallman (Founder of GNU/Linux)\footnote{\href{https://www.gnu.org/philosophy/open-source-misses-the-point.html}{https://www.gnu.org/philosophy/open-source-misses-the-point.html}}
 \end{quote}
 
-Before continuing, a quick word on licenses. Licenses determine the legal rights to sharing code. A piece of  code which is taken from a proprietary server and published on the internet is not necessarily open source. In this instance, the code may have been illegally copied and shared, but it is not licensed for free usage. Under no definitions is this considered open source. Indeed, this touches upon issues of digital copytheft and "piracy", which is a standard term used frequently in the media and in legal proceedings to attach a sense that copying code is the same as larceny or theft on the high seas. Avoiding the question of the validity of this viewpoint, it is important to focus on the license as the differentiating factor between code which has been released legally under an "open" definition or not.
+Before continuing, a quick word on licenses. Licenses determine the legal rights to sharing code. A piece of code which is taken from a proprietary server and published on the internet is not necessarily open source. In this instance, the code may have been illegally copied and shared, but it is not licensed for free usage. Under no definitions is this considered open source. Indeed, this touches upon issues of digital copytheft and "piracy", which is a standard term used frequently in the media and in legal proceedings to attach a sense that copying code is the same as larceny or theft on the high seas. Avoiding the question of the validity of this viewpoint, it is important to focus on the license as the differentiating factor between code which has been released legally under an "open" definition or not.
 
 There are many licenses which are considered to be open source, and there are several arbiters available which judge the validity of open source licensing. The Open Source Initiative maintains a list of approved licenses on their website: \href{https://opensource.org/licenses}{https://opensource.org/licenses}.
 
 Open source, on the other hand, under most definitions, does pertain to ethical concerns about the software's usage, but rather simply refers to whether or not it is permissively licensed and available for users.
 
 
-The Open Source Institute, which originally coined the term {\it open source}, has several parameters by which open source software can be judge as being 'open' or 'closed' (that is, proprietary, non-permissively licensed, non-reusable, limited in usage to a set amount of people, and so on). It may be useful to list these terms below, as they are instructive about how open source can be a nuanced term. These terms are from the OSI's website \footnote{\href{https://opensource.org/osd}{https://opensource.org/osd}}.
+The Open Source Institute, which originally coined the term {\it open source}, has several parameters by which open source software can be judge as being 'open' or 'closed' (that is, proprietary, non-permissively licensed, non-reusable, limited in usage to a set amount of people, and so on). It may be useful to list these terms directly below, as they are instructive about how open source can be a nuanced term. These terms are from the OSI's website \footnote{\href{https://opensource.org/osd}{https://opensource.org/osd}}.
 
 \begin{enumerate}
 
@@ -247,17 +259,6 @@ The Open Source Institute, which originally coined the term {\it open source}, h
 \end{enumerate}
 
 \subsection{Open Source}
-
-This needs to be deleted.
-
-
-- Definition of computational linguistics, and linguistic tooling
-- Code as it pertains to lrl
-- state of the field linguistically
-- State of the field computationally
-- Lack of sharing code or storing it usefully, due to factors: funding, academic cycle, inability, scope, lack of knowledge of domain
-- Some shared code
-
 
 What it is, the history of it in Computational Linguistics and elsewhere, and various incentive models for using open source methods
 
@@ -363,6 +364,10 @@ Process:
 3. `awk` the first few repos, until a random divider, and clone the git repos: `awk '1;/kuromoji-server/{exit}' ../githublist.md | xargs -n1 git clone`
 4. `ipfs add -r repos`
 5. `ipfs pin add repos`
+
+\section{Further Work}
+
+\section{Conclusion}
 
 \section{References}
 %\label{main:ref}
