--- a/thesis.tex
+++ b/thesis.tex
@@ -15,6 +15,7 @@
     \hskip2em\hbox{}\nobreak\hfil\sl#1\/ \rm(#2)
     \parfillskip=0pt \finalhyphendemerits=0 \par}}
 
+\setlength{\parindent}{1cm}
 
 
 \title{Open Source Resources for Low Resource Languages}
@@ -50,43 +51,47 @@
 
 \section{Introduction}
 
-At least half of the world's 7000 languages will be extinct this century \cite[p. 27]{grenoble_2011}. Only a small number are present on the World Wide Web, or present in digital form. The majority of technological infrastructure that first world nations use and depend upon has been built with English, and serves English speakers. There are a few languages - perhaps thirty - with the combination of large populations, official governmental status, and Westernised, industrial economies which affords them a large foothold on the web. It is estimated that less than 5\% of the world's languages will be used online or have significant digital presence \cite{kornai2013digital}.
+At least half of the world's 7000 languages will be extinct this century \cite[p. 27]{grenoble_2011}. Just over half of these languages have writing systems.\footnote{\href{https://www.ethnologue.com/enterprise-faq/how-many-languages-world-are-unwritten-0}{https://www.ethnologue.com/enterprise-faq/how-many-languages-world-are-unwritten-0}} It is estimated that less than 5\% of the world's languages will be used online or have significant digital presence \cite{kornai2013digital}.
 
+The majority of technological infrastructure used globally has been built with English, and serves English speakers. There are a few languages - perhaps thirty - with the combination of large populations with internet access, official governmental status, and Westernised, industrial economies which affords them a foothold on the web.\footnote{\href{https://w3techs.com/technologies/history\_overview/content\_language}{https://w3techs.com/technologies/history\_overview/content\_language}}
+%TODO Include these languages later
+In part, these languages depend upon shared code. Put simply, a literacy system affords written corpora, written corpora can be used by researchers to build grammars, and grammars can be used to build tools such as spell-checkers, parsers, input systems, or later on speech recognition and generation software, semantic analyzers, machine learning and translation systems, and so on. This culturally shared body of code is most often developed in closed environments with consumer endpoints, by the military or large businesses. For instance, the World Wide Web, the largest shared corpus of written language, started with support from  Massachusetts Institute of Technology (MIT) and  Defense Advanced Research Projects Agency (DARPA). Another example would be Google Translate, which uses massive bilingual corpora to provide automatic translation services for free online, but whose code is proprietary and owned by Google.
 
+While this pathway works well for large languages where populations of speakers can be leveraged to provide funding, the majority of the world's languages are not able to develop their own computational resources - either grammars, corpora, or code. Instead, they must rely on small groups of researchers, limited funding, and a grab-bag of written resources when they have them (for instance, the most consistent translations cross-linguistically is the Christian bible, which may not the target language's culture).
 
-- Definition of computational linguistics, and linguistic tooling
-- Code as it pertains to lrl
-- state of the field linguistically
-- State of the field computationally
-- Lack of sharing code or storing it usefully, due to factors: funding, academic cycle, inability, scope, lack of knowledge of domain
-- Some shared code
+In this thesis, I will examine methodology that can be used by linguists, researchers, and language developers to help their languages "digitally ascend" \cite{kornai2013digital} - to bootstrap their corpora creation, write grammars, transform other language's tools and research to their own languages, and to ultimately enable their communities to speak and share their knowledge computationally. This methodology goes under the broad label of {\emph open source} software. Open source software is code which has been developed and made available for free, without concessions about how it is to be used or who uses it. This allows coders to use code which they personally haven't built without earmarking funds for it, thus freeing up significant portions of research and development costs for making tools. At present, the majority of the world's code depends on some point on open source software - for instance, UNIX, and much of the World Wide Web, depends on open source code.
 
+In the field of computational linguistics, however, there are a deficit of resources which are licensed and available as open source. This largely stems from the need to financially recoup expenses for development, on licenses mandated by research groups or military funders, and on a lack of awareness of how open source code works. Another consideration is that an open source label does not ensure that the code is worth using, maintained, relevant, or in scope for a given domain.
 
-In this paper, I will talk about:
-
-\begin{itemize}
-\item - Open source code
-\item  - Longevity of linguistic scholarship and work
-\item   - Data, rights, liability, and privacy
-\item   - Funding
-\item     - Institutional bottleneck
-\item     - Linguistic colonialism-
-\item     - Ethical and moral concerns for military usage
-\item     - Ethical and moral concerns for big business usage
-\item - Open Source work currently available
-\item   - Case study on GitHub, SourceForge, some archival sites (UPenn, Max Planck, DFKI)
-\item - Case study using endangered-languages repository
-\item   - Get diagnostics on the state of the links I've found:
-\item     - What percentage have been updated when
-\item     - Downloaded, etc.
-\item   - Review Excel results
-\item - Peer-to-peer solution for sharing code
-\item   - Stub out example
-\item   - Build a web searcher for automatically getting and sharing code
-\item Further Work: Open source data repositories (touch on), and Working with Ethnologue
-\end{itemize}
-
-Then, I will offer some concluding remarks.
+Below, I will go into further depth about the state of linguistics and computational resources, and what different languages need in order to have digital presence. I'll define what open source is, and talk about issues relevant to open source code for under-resourced languages; specifically, data rights, liability, privacy, funding, military and industrial concerns, ethical reasons for using open source. I'll then talk about the state of open source code currently available online, in particular focusing on a database of open source code that I have built with the help of researchers around the world. Finally, I'll touch on some specific examples of languages which could benefit from open source code, focusing on Gaelic, an endangered language with tens of thousands of speakers but little online resources, and Naskapi, an endangered languages with only a thousand speakers which might be able to benefit from open source code. The Naskapi case study will be based largely on original research, as I engaged in field research at the town where most Naskapi live and talk to linguists working on literacy efforts for this language. Finally, I'll touch on further work possible to help endangered languages, and offer some concluding remarks.
+%
+% \begin{itemize}
+%   - Definition of computational linguistics, and linguistic tooling
+%   - Code as it pertains to lrl
+%   - state of the field linguistically
+%   - State of the field computationally
+% \item - Open source code
+% \item  - Longevity of linguistic scholarship and work
+% \item   - Data, rights, liability, and privacy
+% \item   - Funding
+% \item     - Institutional bottleneck
+% \item     - Linguistic colonialism-
+% \item     - Ethical and moral concerns for military usage
+% \item     - Ethical and moral concerns for big business usage
+% \item - Open Source work currently available
+% \item   - Case study on GitHub, SourceForge, some archival sites (UPenn, Max Planck, DFKI)
+% - Lack of sharing code or storing it usefully, due to factors: funding, academic cycle, inability, scope, lack of knowledge of domain
+% - Some shared code
+% \item - Case study using endangered-languages repository
+% \item   - Get diagnostics on the state of the links I've found:
+% \item     - What percentage have been updated when
+% \item     - Downloaded, etc.
+% \item   - Review Excel results
+% \item - Peer-to-peer solution for sharing code
+% \item   - Stub out example
+% \item   - Build a web searcher for automatically getting and sharing code
+% Open source data repositories (touch on), and Working with Ethnologue
+% \end{itemize}
 
 \subsubsection{The current state of language divesity}
 
