Add elda and elsnet

--- a/the_rest.tex
+++ b/the_rest.tex
@@ -260,6 +260,10 @@ I propose a study of RichardLitt/endangered-languages:
   - User evaluations from other open source scientists
 - Future goals
 
+% Other resources
+% http://www.elda.org/en/catalogues/language-resources-announcements/
+% http://www.elsnet.org/
+
 \section{Tool}
 
 Build a web-application tool for serving a decentralized data store for endangered language tools and data
