Segment out sections into their own files

--- a/thesis.tex
+++ b/thesis.tex
@@ -111,7 +111,33 @@
 \setcounter{page}{1}
 
 \input{introduction}
-\input{the_rest}
+\include{endangered-languages}
+% The State of endangered languages and computational linguistics
+%\subsection{Definining Endangered Languages}
+%\subsection{What are computational resources}
+\include{open-source}
+% \subsection{Defining "open source"}
+% \subsection{Where is open source code?}
+% \subsection{Data rights and privacy}
+% \subsection{Liability}
+% \subsection{Funding}
+% \subsection{Military and enterprise solutions}
+% \subsection{Ethical reasons for using open source}
+\include{synthesis}
+% Open Source code for endangered languages
+% \subsection{BLARK}
+% \subsection{NLTK and other larger libraries}
+% \subsection{Other resources}
+% \subsection{solutions}
+% A database for open source code
+% Describe github.com/RichardLitt/endangered-languages
+\include{case-studies}
+% \subsection{Gaelic}
+% \subsection{Naskapi}
+% % \subsection{Kilangi} Another possible usecase?
+\include{conclusion}
+% \section{future-work}
+% \section{conclusion}
 
 % % \input{background}
 % % \input{definition}
