Adding an abstract

--- a/thesis.tex
+++ b/thesis.tex
@@ -60,22 +60,15 @@
 \end{titlepage}
 \newpage
 
-	\thispagestyle{empty}
-  \begin{abstract}
-    \setlength{\parskip}{2ex plus 0.5ex minus 0.2ex}
+\include{abstract}
 
-    % Please put \noindent before each paragraph of the abstract!
-
-    \noindent ADD MORE HERE
-
-  \end{abstract}
-  \newpage
+\newpage
 
 %%% Eidesstattliche Erklärung
 \thispagestyle{empty}
-\noindent\textbf{Eidesstattliche Erklärung}
+\noindent\textbf{Eidesstattliche Erkl\"arung}
 
-\noindent Hiermit erkläre ich, dass ich die vorliegende Arbeit selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel verwendet habe.\\
+\noindent Hiermit erkl\"are ich, dass ich die vorliegende Arbeit selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel verwendet habe.\\
 
 \noindent\textbf{Declaration}
 
@@ -83,7 +76,7 @@
 
 \noindent\textbf{Acknowledgements}
 
-\noindent Jonathan Poitz provided formatting files, but did not advise on the content. This thesis is based on a paper presented at the LREC CCURL Workshop in July 2014 in Slovenia. Hugh Paterson III was a coauthor on that paper. All work presented here is original content.
+\noindent Jonathan Poitz provided formatting files, but did not advise on the content. This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2014 in Slovenia. Hugh Paterson III was a coauthor on that paper.
 
 \vspace{1cm}
 
