Rename synthesis to something useful

--- a/thesis.tex
+++ b/thesis.tex
@@ -116,7 +116,7 @@
 % \subsection{Funding}
 % \subsection{Military and enterprise solutions}
 % \subsection{Ethical reasons for using open source}
-\include{synthesis}
+\include{open-source-for-end-langs}
 % Open Source code for endangered languages
 % \subsection{BLARK}
 % \subsection{NLTK and other larger libraries}
