Use the term low resource languages

--- a/thesis.tex
+++ b/thesis.tex
@@ -30,7 +30,7 @@
 
 			 and\vspace{0.2cm}
 
-			 Endangered Languages}\vspace{0.5cm}
+			 Low Resource Languages}\vspace{0.5cm}
 
 		\HRule \\[1.5cm]
 
