Going on this assumption at the moment. Emailed her to ask.

--- a/thesis.tex
+++ b/thesis.tex
@@ -46,6 +46,7 @@
 			\begin{flushright} \large
 				\emph{Supervisors:} \\
 				Dr. Dietrich \textsc{Klakow}\\
+				Dr. Alexis \textsc{Palmer}\\
 				% \emph{Advisors:} \\
 				% Dr. Harm \textsc{Brouwer}\\
 			\end{flushright}
