Number sections to make search easier

--- a/thesis.tex
+++ b/thesis.tex
@@ -104,12 +104,12 @@
 
 \setcounter{page}{1}
 
-\input{introduction}
-\include{endangered-languages}
+\input{1-introduction}
+\include{2-endangered-languages}
 % The State of endangered languages and computational linguistics
 %\subsection{Definining Endangered Languages}
 %\subsection{What are computational resources}
-\include{open-source}
+\include{3-open-source}
 % \subsection{Defining "open source"}
 % \subsection{Where is open source code?}
 % \subsection{Data rights and privacy}
@@ -117,7 +117,7 @@
 % \subsection{Funding}
 % \subsection{Military and enterprise solutions}
 % \subsection{Ethical reasons for using open source}
-\include{open-source-for-end-langs}
+\include{4-open-source-for-end-langs}
 % Open Source code for endangered languages
 % \subsection{BLARK}
 % \subsection{NLTK and other larger libraries}
@@ -125,11 +125,11 @@
 % \subsection{solutions}
 % A database for open source code
 % Describe github.com/RichardLitt/endangered-languages
-\include{case-studies}
+\include{6-case-studies}
 % \subsection{Gaelic}
 % \subsection{Naskapi}
 % % \subsection{Kilangi} Another possible usecase?
-\include{conclusion}
+\include{7-conclusion}
 % \section{future-work}
 % \section{conclusion}
 
