--- a/lrec-styled-thesis/thesis.tex
+++ b/lrec-styled-thesis/thesis.tex
@@ -129,7 +129,7 @@ However, few of these metrics take into account the level of digital literacy fo
 \begin{itemize}
 \item It is spoken by living fluent speakers, including second-language learners.
 \item It is spoken by living, first-language learners.
-\item It is productive in it's morphology, growing in vocabulary, and not frozen in time.
+\item It is productive in its morphology, growing in vocabulary, and not frozen in time.
 \item It is recorded in some form, including audio files.
 \item It has a writing system.
 \item It has a writing system that is used by modern speakers to record their own language.
